@@ -1,13 +1,13 @@
 Package: xcms
-Version: 1.21.13
-Date: 2010-02-16
+Version: 1.21.14
+Date: 2010-02-18
 Title: LC/MS and GC/MS Data Analysis
 Author: Colin A. Smith <csmith@scripps.edu>, 
         Ralf Tautenhahn <rtautenh@scripps.edu>,
         Steffen Neumann <sneumann@ipb-halle.de>
 Maintainer: Colin A. Smith <csmith@scripps.edu>
 Depends: R (>= 1.9.0), methods 
-Suggests: faahKO, msdata, multtest, ncdf, rgl, MassSpecWavelet (>= 1.5.2), Rgraphviz, RANN
+Suggests: faahKO, msdata, multtest, ncdf, rgl, MassSpecWavelet (>= 1.5.2), Rgraphviz, RANN, snow
 SystemRequirements: NetCDF, zlib
 Description: Framework for processing and visualization of
         chromatographically separated and single-spectra mass spectral data. Imports from
